test/corpus/vesti_statements.txt
================================================================================
Docclass with single name
================================================================================

docclass foobar

--------------------------------------------------------------------------------

(vesti_content
    (docclass_decl
        (KEYWORD_docclass)
        (class_pkg_name)))

================================================================================
Docclass with options
================================================================================

docclass foobar (a4paper, foo-bar,baz)

--------------------------------------------------------------------------------

(vesti_content
    (docclass_decl
        (KEYWORD_docclass)
        (class_pkg_name)
        (options
            (option_name)
            (option_name)
            (option_name))))

================================================================================
Multiline package decl (only names, no newline) 1
================================================================================

importpkg { amsmath, amssymb, tikz }

--------------------------------------------------------------------------------

(vesti_content
    (multipkg_decl
        (KEYWORD_importpkg)
        (class_pkg_name)
        (class_pkg_name)
        (class_pkg_name)))

================================================================================
Multiline package decl (only names, no newline) 2
================================================================================

importpkg { amsmath, amssymb, tikz, }

--------------------------------------------------------------------------------

(vesti_content
    (multipkg_decl
        (KEYWORD_importpkg)
        (class_pkg_name)
        (class_pkg_name)
        (class_pkg_name)))

================================================================================
Text Contents
================================================================================

This is a text 그리고 유니코드

--------------------------------------------------------------------------------

(vesti_content
    (text
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)))

================================================================================
Latex functions
================================================================================

\foo \bar{123 \hat hello}{\baz}

--------------------------------------------------------------------------------

(vesti_content
    (latex_function (latex_function_name))
    (latex_function (latex_function_name)
        (brace_group
            (vesti_content
                (text (word))
                (latex_function (latex_function_name))
                (text (word))))
        (brace_group
            (vesti_content
                (latex_function (latex_function_name))))))

